fix: jump, code mistake

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 }
 
 .jump {
-    animation: jump 1s ease;
+    animation: jump 1s easy;
 }
 @keyframes jump {
     0%, 100% {
